[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
maud = { version = "0.26", features = ["axum"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
session = { git = "https://github.com/Banyc/session.git", rev = "65a1d6ef5358c953a5cf292ca93284904073ca50" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
