[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-client-ip = "0.5"
axum-extra = { version = "0.9", features = ["typed-header"] }
blake3 = "1"
expiring_hash_map = { git = "https://github.com/Banyc/expiring_hash_map.git", rev = "5d23d32d8f26a7fd763986cb26e5793d63c04e6e" }
htmx_util = { git = "https://github.com/Banyc/htmx_util.git", rev = "3796508cb76dad103ce437369782140a0468f795" }
maud = { version = "0.26", features = ["axum"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
ron = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
