[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
blake3 = "1"
bon = "2"
headers = "0.4"
htmx_util = { git = "https://github.com/Banyc/htmx_util.git", rev = "3796508cb76dad103ce437369782140a0468f795" }
http = "1"
maud = { version = "0.26" }
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.24" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
ron = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
